tests/negative/symbols/recursive.orng
// error: use of identifier `x` before its definition
// 
fn main() -> Int  {
    let x = x
    0
}